[gd_scene load_steps=19 format=2]

[ext_resource path="res://ju-87.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Plane.gd" type="Script" id=2]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/Healthbar3D.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/Enemies.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/Coins.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Game.gd" type="Script" id=7]
[ext_resource path="res://entities/Healthbar2D.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/DaysOne-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 2
outline_color = Color( 0.172549, 0.219608, 0.141176, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="Game" type="Spatial"]
script = ExtResource( 7 )

[node name="Terrain" parent="." instance=ExtResource( 3 )]
transform = Transform( 12.5195, 0, 0, 0, 6.7957, 0, 0, 0, 6.7957, -0.894254, -0.0337305, -0.103891 )
step = 0.01

[node name="Plane" type="Spatial" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 36.2392, -13.3535 )
script = ExtResource( 2 )
shift = Vector3( 0, 8, 0 )

[node name="ju-87" parent="Plane" instance=ExtResource( 1 )]
transform = Transform( 0.769058, 0, 0, 0, 0.769058, 0, 0, 0, 0.769058, 0, 1.90923, 0 )

[node name="Healthbar3D" parent="Plane" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.09821, -1.08648 )
cast_shadow = 0
modulate = Color( 0.929412, 0.929412, 0.929412, 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 17.1488, -15.064 )
current = true

[node name="Coins" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.457, 51.8584 )
TIMER_DELAY = 0.2

[node name="Enemies" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.4045, 32.7354 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar2D" parent="CanvasLayer" instance=ExtResource( 8 )]
position = Vector2( 242.013, 93.6161 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = -30.4775
margin_top = 13.921
margin_right = 173.522
margin_bottom = 59.921
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.380392, 0.839216, 0.623529, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Health:"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = -15.4
margin_top = 47.95
margin_right = 115.6
margin_bottom = 99.95
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.945098, 0.0901961, 1 )
text = "Coins:"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 73.6
margin_top = 56.4
margin_right = 137.6
margin_bottom = 90.4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.964706, 0.0627451, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 164.955
margin_top = 63.2771
margin_right = 299.955
margin_bottom = 84.2771
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.964706, 0.105882, 0.0431373, 1 )
text = "Bullets: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer"]
margin_left = 246.836
margin_top = 62.6762
margin_right = 286.836
margin_bottom = 83.6762
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="ColorRect" parent="CanvasLayer"]
margin_left = 185.0
margin_top = 122.0
margin_right = 868.0
margin_bottom = 440.0
color = Color( 0.992157, 0.992157, 0.992157, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="CanvasLayer/GameOver"]
margin_left = 25.1927
margin_top = -44.7968
margin_right = 650.193
margin_bottom = 261.203
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game over"
align = 1
valign = 1
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/GameOver"]
margin_left = 244.06
margin_top = 184.0
margin_right = 437.06
margin_bottom = 224.0
custom_fonts/font = SubResource( 7 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GameOver"]
margin_left = 245.517
margin_top = 140.295
margin_right = 360.517
margin_bottom = 227.295
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.980392, 0.960784, 0.0588235, 1 )
text = "Your score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/GameOver"]
margin_left = 370.781
margin_top = 140.295
margin_right = 697.781
margin_bottom = 239.295
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.980392, 0.960784, 0.0588235, 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/GameOver/Button" to="." method="_on_Button_pressed"]
